Archive2/8f/dfe2bddffda4a1/output
main.cpp:30:36: error: type/value mismatch at argument 1 in template parameter list for 'template<long unsigned int M, long unsigned int N> class MapV2'
 template class MapV2<size_t, size_t>;
                                    ^
main.cpp:30:36: error:   expected a constant of type 'long unsigned int', got 'size_t {aka long unsigned int}'
main.cpp:30:36: error: type/value mismatch at argument 2 in template parameter list for 'template<long unsigned int M, long unsigned int N> class MapV2'
main.cpp:30:36: error:   expected a constant of type 'long unsigned int', got 'size_t {aka long unsigned int}'
